--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<section class="banner">
 		<div class="video">
-			<video autoplay loop class="bn-video"> 
+			<video autoplay muted loop class="bn-video"> 
 				<source src="images/Q1_banner_video.mp4" type="video/mp4">
 			</video>
 			<div class="content">
@@ -22,13 +22,13 @@
 	<section class="fix-menu">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4 col-lg-offset-2 col-xs-4 col-xs-offset-1">
+				<div class="col-lg-2 offset-lg-1 d-none d-md-block">
 					<div class="menu-logo">
-						<img src="images/icon/logo_white.svg" alt="omnia q1">
+						<img class="menu-logo" src="images/icon/logo_white.svg" alt="omnia q1">
 					</div>
 				</div>
-				<div class="col-lg-4 col-lg-offset-1 col-xs-4 col-xs-offset-1">
-					<div class="menu"">
+				<div class="col-md-4 offset-md-5 col-xs-12">
+					<div class="menu">
 						<ul>
 							<li><a href="#">設計</a></li>
 							<li><a href="#">產品規格</a></li>
