--- a/index.html
+++ b/index.html
@@ -10,37 +10,166 @@
 <body>
 	<section class="banner">
 		<div class="video">
-			<video autoplay muted loop class="bn-video"> 
-				<source src="images/Q1_banner_video.mp4" type="video/mp4">
-			</video>
 			<div class="content">
 				<img src="images/icon/logo_white.svg" alt="omnia q1">
 				<h2>讓手機從此完全解放、絕對自由</h2>
 			</div>
+			<video autoplay muted loop class="bn-video"> 
+				<source src="images/Q1_banner_video.mp4" type="video/mp4">
+			</video>
 		</div>
 	</section>
 	<section class="fix-menu">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-2 offset-lg-1 d-none d-md-block">
+				<div class="col-lg-2 col-lg-offset-1 col-md-2 hidden-sm hidden-xs">
 					<div class="menu-logo">
-						<img class="menu-logo" src="images/icon/logo_white.svg" alt="omnia q1">
+						<a href="#">
+							<img class="menu-logo" src="images/icon/logo_white.svg" alt="omnia q1">
+						</a>
 					</div>
 				</div>
-				<div class="col-md-4 offset-md-5 col-xs-12">
-					<div class="menu">
-						<ul>
-							<li><a href="#">設計</a></li>
-							<li><a href="#">產品規格</a></li>
-							<li><a href="#">立即購買</a></li>
-							<div class="clearfix"></div>
-						</ul>
+				<div class="col-md-4 col-md-offset-5 col-sm-12 col-xs-12">
+					<ul class="menu">
+						<li><a href="#">設計</a></li>
+						<li><a href="#">產品規格</a></li>
+						<li><a href="#">立即購買</a></li>
+						<div class="clearfix"></div>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="pre-order">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-7 col-md-6">
+					<img src="images/Q1_img_01.png" alt="">
+				</div>
+				<div class="col-lg-4 col-lg-offset-1 col-md-4">
+					<div class="info">
+						<h2 >OMNIA Q1 早鳥預購</h2>
+						<h3 >已有<span> 390 </span>位早鳥預購</h3>
+						<div class="info-date">
+							<p>剩餘時間 30 天 <br>
+							   時程 2018/06/04 – 2018/07/04
+							</p>
+						</div>
+						<div class="btn">
+							<a href="#"><p>加入早鳥預購</p></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>		
+	</section>
+	<section class="part-01">
+		<div class="bg-box">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-7 col-lg-push-5 col-md-7 col-md-push-4 col-sm-8 col-sm-push-5 col-xs-10">
+						<img src="images/Q1_img_02.png" alt="">
+					</div>
+					<div class="col-lg-4 col-lg-pull-6 col-md-4 col-md-pull-6 col-sm-4 col-sm-pull-7 col-xs-9 col-xs-pull-0">
+						<div class="content">
+							<h3 class="sub-title text-white">擺脫最後一條電線的糾纏束縛</h3>
+							<div class="blue-line"></div>
+							<h2 class="title text-white">心．電．感應</h2>
+							<p class="text text-lgray">如果手機可以無線上網、也不必插上耳機就能聽音樂，那麼，為什麼還要接線充電呢？對於許多使用者來說，充電線正是完全擺脫束縛、解放手機自由的最後一道障礙。</p>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+	<section class="part-02">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-10 col-lg-offset-1 col-sm-12 col-xs-12">
+					<iframe src="https://www.youtube.com/embed/svV8HwSi9vI?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="part-03">
+		<div class="bg-box" style="background-image: url(images/Q1_img_03.png);">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-5 col-lg-push-7">
+						<img class="part-03-img" src="images/Q1_img_04_pc.png" alt="">
+					</div>
+					<div class="col-lg-4 col-lg-pull-4">
+						<div class="content">
+							<h2 class="title text-black">卓越的兼容性</h2>
+							<p class="text text-dgray">iPhone 8 與 iPhone X 系列、以及多款知名品牌手機均已支援「Qi」無線感應充電標準，只要平放在適當的充電座上，就可以迅速恢復電量充沛。然而，充電座不只一種、也有高下之分。設計先進、結構嚴謹的亞果元素 OMNIA Q1 不僅充電效率優異。</p>
+							<div class="icon">
+								<img class="icon-blue" src="images/icon/blue/-g-icon_product_compatibility.svg" alt="">
+								<p class="icon-text">支援所有 Qi 可用裝置</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="part-04">
+		<div class="bg-box">
+
+			<div class="container">
+
+				<div class="row">
+
+					<div class="col-lg-4 col-lg-offset-1">
+						<div class="content-01">
+							<h3 class="sub-title text-white">充電速度快，心才可以慢</h3>
+							<div class="blue-line"></div>
+							<h2 class="title text-white">精力．充．沛</h2>
+						</div>
+					</div>
+
+					<div class="col-lg-6 col-lg-offset-1">
+						<div class="content-01">
+							<p class="text text-lgray">OMNIA Q1採用 Qi v1.2.4 無線充電標準、以USB介面連結電腦或電源，可以直接為新款 iPhone 8、iPhone X 與各種相容手機等裝置充電。</p>
+							<div class="icon">
+								<img class="icon-blue" src="images/icon/blue/-g-icon_qi.svg" alt="">
+								<p class="icon-text">Qi v1.2.4 無線充電標準</p>
+							</div>
+							<div class="icon">
+								<img class="icon-blue" src="images/icon/blue/-g-icon_qc.svg" alt="">
+								<p class="icon-text">支援 QC 快充</p>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="row-02">
+					<div class="col-lg-8">
+						<img class="pad-02" src="images/Q1_img_05d_pc.png" alt="">
+					</div>
+				</div>
+
+			</div>
+		</div>	
+	</section>
 
 
 </body>
 </html>
+
+
+
+			<!-- <div class="iphone-pad">
+					<div class="row">
+						<div class="col-lg-8">
+							<img class="iphone-01" src="images/Q1_img_05a_pc.png" alt="">
+							<img class="pad-02" src="images/Q1_img_05c_pc.png" alt="">
+						</div>
+					</div>
+				</div> -->
+
+
+
+
+
+
+
