--- a/index.html
+++ b/index.html
@@ -114,13 +114,10 @@
 	</section>
 	<section class="part-04">
 		<div class="bg-box">
-
 			<div class="container">
-
 				<div class="row">
-
 					<div class="col-lg-4 col-lg-offset-1">
-						<div class="content-01">
+						<div class="content-left">
 							<h3 class="sub-title text-white">充電速度快，心才可以慢</h3>
 							<div class="blue-line"></div>
 							<h2 class="title text-white">精力．充．沛</h2>
@@ -128,7 +125,7 @@
 					</div>
 
 					<div class="col-lg-6 col-lg-offset-1">
-						<div class="content-01">
+						<div class="content-right">
 							<p class="text text-lgray">OMNIA Q1採用 Qi v1.2.4 無線充電標準、以USB介面連結電腦或電源，可以直接為新款 iPhone 8、iPhone X 與各種相容手機等裝置充電。</p>
 							<div class="icon">
 								<img class="icon-blue" src="images/icon/blue/-g-icon_qi.svg" alt="">
@@ -141,15 +138,33 @@
 						</div>
 					</div>
 				</div>
-
-				<div class="row-02">
+				<div class="row">
 					<div class="col-lg-8">
 						<img class="pad-02" src="images/Q1_img_05d_pc.png" alt="">
 					</div>
 				</div>
-
 			</div>
 		</div>	
+	</section>
+	<section class="part-04-01">
+		<div class="bg-black">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4 col-lg-offset-1">
+						<div class="content">
+							<h3 class="title text-white">同時支援 Apple 與 Android 的快速充電規格</h3>
+							<img src="images/Q1_img_06_pc.png" alt="">						
+						</div>
+					</div>
+					<div class="col-lg-6 col-lg-offset-1">
+						<div class="content-right">
+							<p class="text text-lgray">Q1 具備最新的定頻調壓技術、以及卓越的散熱設計，所以當然擁有超越一般產品的充電效率，可縮短充電時間達 30％。更快的充電速度，就是更高的溝通與工作效率、以及更多節省下來思考人生的時間。</p>
+							<p class="note text-lgray">* 實際充電速度會因環境溫度而影響</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 
