--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<section class="part-02">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-10 col-lg-offset-1 col-sm-12 col-xs-12">
+				<div class="col-lg-12 col-sm-12 col-xs-12">
 					<iframe src="https://www.youtube.com/embed/svV8HwSi9vI?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 				</div>
 			</div>
@@ -137,12 +137,14 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-8">
-						<img class="pad-02" src="images/Q1_img_05d_pc.png" alt="">
-					</div>
-				</div>
+				</div>			
+			</div>
+			<div class="phone-pad">
+				<img class="phone-01" src="images/Q1_img_05a_pc.png" alt="">
+				<img class="phone-02" src="images/Q1_img_05b_pc.png" alt="">
+				<img class="pad-01" src="images/Q1_img_05c_pc.png" alt="">
+				<img class="pad-02" src="images/Q1_img_05d_pc.png" alt="">
+
 			</div>
 		</div>	
 	</section>
@@ -151,8 +153,8 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-4 col-lg-offset-1">
-						<div class="content">
-							<h3 class="title text-white">同時支援 Apple 與 Android 的快速充電規格</h3>
+						<div class="content-left">
+							<h3 class="title text-white">同時支援 Apple 與 Android 的快速<br>充電規格</h3>
 							<img src="images/Q1_img_06_pc.png" alt="">						
 						</div>
 					</div>
@@ -161,26 +163,106 @@
 							<p class="text text-lgray">Q1 具備最新的定頻調壓技術、以及卓越的散熱設計，所以當然擁有超越一般產品的充電效率，可縮短充電時間達 30％。更快的充電速度，就是更高的溝通與工作效率、以及更多節省下來思考人生的時間。</p>
 							<p class="note text-lgray">* 實際充電速度會因環境溫度而影響</p>
 						</div>
+						<div class="data-line">
+							<div class="line-01"></div>
+							<p class="text text-lgray">Q1 快充可縮短充電時間 30%</p>
+							<div class="line-02"></div>
+							<p class="text text-lgray">一般 5W 無線充電器</p>
+						</div>
+						<div class="product">
+							<a href="#">
+							<p class="text-lgray note">快充功能須搭配 QC 充電器</p>
+							<img class="icon" src="images/icon/-g-icon_arrow_down.svg" alt="">
+							<div class="clearfix"></div>
+							</a>
+
+							<div class="product-01">
+								<img src="images/Q1_product_PA601.png" alt="">
+								<div class="content">
+									<h5 class="text-lgray">OMNIA PA601</h5>
+									<p class="text-dgray">多達 4 組獨立 5V/2.4A USB-A 埠、1 組 Quick Charge 3.0 快充 USB-A 埠、再加上 1 組 5V/3A USBType-C 充電埠。</p>
+									<div class="clearfix"></div>
+								</div>
+								<div class="clearfix"></div>
+							</div>
+							<div class="product-02">
+								<img src="images/Q1_product_PA401.png" alt="">
+								<div class="content">
+									<h5 class="text-lgray">OMNIA PA401</h5>
+									<p class="text-dgray">擁有 3 組 5V/2.4A 大功率埠、再加上 1 組 Quick Charge 3.0 快充埠，可同時為 4 部行動設備迅速充電。</p>
+									<div class="clearfix"></div>
+								</div>
+								<div class="clearfix"></div>	
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+	<section class="part-04-02">
+		<div class="bg-black">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4 col-lg-offset-1">
+						<div class="content">
+							<h2 class="title text-white">極高的電力轉換效率</h2>
+							<p class="text text-lgray">更棒的是，OMNIA Q1 的電力轉換效率極高，所以充電時無須取下手機保護殼，也能以最高效率迅速充飽電力。 </p>
+							<div class="icon">
+								<img class="icon-blue" src="images/icon/blue/-g-icon_support_case.svg" alt="">
+								<p class="icon-text">充電不受保護殼影響</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-7">
+						<img class="phone-case" src="images/Q1_case_friendly.gif" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="part-05">
+		<div class="bg-box">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4 col-lg-offset-1">
+						<div class="content-left">
+							<h3 class="sub-title text-white">無論白天黑夜，OMNIA Q1 都給您滿滿動力</h3>
+							<div class="blue-line"></div>
+							<h2 class="title text-white">吐故．納新</h2>
+						</div>
+					</div>
+					<div class="col-lg-6 col-lg-offset-1">
+						<div class="content-right">
+							<p class="text text-lgray">在OMNIA Q1上，亮起的燈號不只代表能量，更是亞果元素為您設想周到的細緻心意。透過切換按鈕，您可以選擇「全周光」或「單一燈號」模式，並且透過「持續光」或「呼吸光」狀態，一眼就明瞭充電進度。在一般狀況下，全周光模式以柔和而明顯的圓周照明，不僅讓您從遠處也能輕易辨識充電狀態，更是生活空間中引人注目的視覺中心。</p>
+						</div>
+					</div>
+				</div>
+				<div class="pad">
+				<img src="images/Q1_img_07b_pc.png" alt="">
+				<img src="images/Q1_img_07a_pc.png" alt="">
+				</div>
+			</div>
 
+		</div>
+	</section>
 
 </body>
 </html>
 
 
 
-			<!-- <div class="iphone-pad">
-					<div class="row">
-						<div class="col-lg-8">
-							<img class="iphone-01" src="images/Q1_img_05a_pc.png" alt="">
-							<img class="pad-02" src="images/Q1_img_05c_pc.png" alt="">
-						</div>
-					</div>
-				</div> -->
+
+
+
+
+
+
+
+
+
+
+
 
 
 
